@@ -1,12 +1,8 @@
 package com.team5.hospital_here.hospital.service;
 
-import com.team5.hospital_here.common.exception.CustomException;
-import com.team5.hospital_here.common.exception.ErrorCode;
 import com.team5.hospital_here.hospital.Mapper.HospitalDepartmentMapper;
-import com.team5.hospital_here.hospital.dto.DepartmentDTO;
 import com.team5.hospital_here.hospital.dto.HospitalDTO;
 import com.team5.hospital_here.hospital.dto.HospitalDepartmentDTO;
-import com.team5.hospital_here.hospital.entity.Department;
 import com.team5.hospital_here.hospital.entity.Hospital;
 import com.team5.hospital_here.hospital.entity.HospitalDepartment;
 import com.team5.hospital_here.hospital.repository.DepartmentRepository;
@@ -47,7 +43,7 @@ public class HospitalService {
         return hospitalRepository.findAll(pageable);
     }
 
-    public Page<Hospital> searchHospitals(String name, String address, int page, int size) {
+    public Page<Hospital> searchHospitals(String name, String address, String departmentName, int page, int size) {
         return getAllHospitals(name, address, page, size);
     }
 
@@ -74,18 +70,17 @@ public class HospitalService {
     }
 
     public List<HospitalDTO> getAllHospitalsWithDepartments() {
-        // Get all hospitals
         List<Hospital> hospitals = hospitalRepository.findAll();
-        // Get all departments
         List<HospitalDepartmentDTO> departments = hospitalDepartmentRepository.findAll()
                 .stream()
                 .map(hospitalDepartmentMapper::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
 
         Map<Long, HospitalDTO> hospitalDTOMap = new HashMap<>();
 
         for (Hospital hospital : hospitals) {
             HospitalDTO dto = convertToDto(hospital);
+            dto.setDepartments(new ArrayList<>()); // departments 필드 초기화
             hospitalDTOMap.put(hospital.getId(), dto);
         }
 
@@ -104,5 +99,24 @@ public class HospitalService {
                 .orElseThrow(() -> new RuntimeException("Hospital not found for id :: " + id));
     }
 
+    public HospitalDTO getHospitalDTOById(Long id) {
+        Hospital hospital = hospitalRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Hospital not found for id :: " + id));
+        HospitalDTO hospitalDTO = convertToDto(hospital);
+        return hospitalDTO;
+    }
 
+
+
+
+    public List<Hospital> getHospitalByNameContained(String name){
+        List<Hospital> hospitals = hospitalRepository.findByNameContains(name);
+        for(Hospital hospital : hospitals){
+            for(HospitalDepartment hospitalDepartment : hospital.getHospitalDepartments()){
+                hospitalDepartment.setHospital(null);
+            }
+        }
+
+        return hospitals;
+    }
 }
